--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/images/i_logo.png">
+  <link rel="icon" href="/i_logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CampusThreads</title>
 </head>
